--- a/src/main/frame.form
+++ b/src/main/frame.form
@@ -51,7 +51,7 @@
                   <Component id="menu1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="sp" pref="1259" max="32767" attributes="0"/>
+                      <Component id="sp" max="32767" attributes="0"/>
                       <Component id="header1" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
@@ -84,11 +84,14 @@
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="null"/>
             </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[1260, 780]"/>
+            </Property>
           </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="form.home" name="home2">
+            <Component class="form.transaction" name="transaction2">
             </Component>
           </SubComponents>
         </Container>
