--- a/src/component/menu.form
+++ b/src/component/menu.form
@@ -56,15 +56,15 @@
         <Component class="javax.swing.JLabel" name="JLabel1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="SansSerif" size="26" style="1"/>
+              <Font name="SansSerif" size="36" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/minorcomponent/logo.png"/>
+              <Image iconType="3" name="/minorcomponent/logo2.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="OOP Bank"/>
+            <Property name="text" type="java.lang.String" value=" PloiKong"/>
           </Properties>
         </Component>
         <Component class="swing.ListMenu" name="listMenu1">
